2006-02-13  Francois  <francois@dechelle.net>

	* Added install/etc/eyedb.conf.in and install/etc/eyedbd.conf.in, configuration file templates, plus substitution in Makefile.am instead of configure.in

2006-01-29  Francois  <francois@dechelle.net>

	* Release 2.7.5

