@@ -40,14 +40,19 @@ eyedbputimage_LDADD=libeyedbcgi.la $(EYEDBLIBS)
 # The last directory is needed for endian.h, which is generated by configure.in
 INCLUDES=-I$(top_srcdir)/src -I$(top_srcdir)/include -I$(top_builddir)/include
 
-noinst_cgidir=$(pkglibdir)/www/cgi-bin
-noinst_cgi_SCRIPTS=eyedbcgi.sh
+cgidir=$(pkglibdir)/www/cgi-bin
+noinst_SCRIPTS=eyedbcgi.sh
 
 confdir=$(pkglibdir)/www/conf
-conf_DATA=eyedb.conf
+noinst_DATA=eyedb.conf
 
-install-data-hook:
-	-[ ! -f $(DESTDIR)$(noinst_cgidir)/eyedbcgi.sh ] && cp $(srcdir)/eyedbcgi.sh $(DESTDIR)$(noinst_cgidir)/
+install-data-local:
+	test -z "$(confdir)" || $(mkdir_p) "$(DESTDIR)$(confdir)"
+	( \
+		test ! -f $(DESTDIR)$(confdir)/eyedb.conf && $(INSTALL_DATA) eyedb.conf $(DESTDIR)$(confdir)/eyedb.conf ; \
+		test ! -f $(DESTDIR)$(cgidir)/eyedbcgi.sh && $(INSTALL_DATA) $(srcdir)/eyedbcgi.sh $(DESTDIR)$(cgidir)/eyedbcgi.sh ; \
+		exit 0 \
+	)
 
 EXTRA_DIST= \
 eyedbcgi.h \
